--- a/client/src/App.css
+++ b/client/src/App.css
@@ -46,7 +46,7 @@ body {
   grid-column: 1 / 3;
   grid-row: 1 / 2;
   background-image: linear-gradient(to bottom,         
-  #b8b808, #636723);
+  red, black);
   color: white;
   font-size: 48pt;
   border-color: black;
