--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,7 +22,7 @@ body {
 
 #root {
   background-color: var(--swatch-primary);
-  font-family: "Lexend Exa";
+  font-family: "Tangerine";
   position: absolute;
   width: 80%;
   left: 10%;
@@ -43,12 +43,14 @@ body {
 }
 
 #playlister-banner {
-  grid-column: 1 / 3;
+  grid-column: 1 / 2;
   grid-row: 1 / 2;
   background-image: linear-gradient(to bottom,         
-  red, black);
+  green, black);
   color: white;
-  font-size: 48pt;
+  font-size: 35pt;
+  margin-right: auto;
+  align-items: center;
   border-color: black;
   border-width: 2px;
   border-style: solid;
@@ -56,24 +58,46 @@ body {
 }
 
 #edit-toolbar {
-  grid-column: 2 / 3;
+  grid-column: 2/3;
   grid-row: 1 / 2;
   background-color: transparent;
-  float:right;
+  border-radius: 30px;
+  display: flex;
+  float: right;
+
+
 }
 
-#playlist-selector, #playlist-cards {
-  overflow: scroll;
-  grid-column: 1 / 3;
+#playlist-selector{
+  grid-column: 1 / 2;
   grid-row: 2 / 3;
   display:grid;
+  font-size:26pt;
+  border-width: 5px;
+  border-width: 5px;
+  margin-top: 25px;
+  margin-top: 25px;
+  color: black;
+  cursor: pointer;
+  opacity: 100%;
+  margin-left: 30px;
+  background-color: var(--swatch-primary);
+}
+#playlist-cards {
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
+  display:grid;
+  
+  margin-left: 30px;
   background-color: var(--swatch-primary);
 }
 
 .playlister-button, .playlister-button-disabled {
-  font-size:36pt;
-  border-width: 0px;
-  float:left;
+  font-size:26pt;
+  border-width: 5px;
+  border-width: 5px;
+  margin-top: 25px;
+  margin-top: 25px;
   color: black;
   cursor: pointer;
   opacity: 100%;
@@ -100,14 +124,17 @@ body {
   align-items: center;
   justify-content: center;
   font-size: 36pt;
+  grid-column: 1 / 2;
+  grid-row: 2/3;
 }
 
 #add-list-button {
-  float:left;
+  margin-top:  10px;;
 }
 
 .list-card, .selected-list-card, .unselected-list-card {
   font-size: 18pt;
+  align-content: start;
   margin: 10px;
   padding: 20px;
   border-radius: 25px;
@@ -281,6 +308,141 @@ input {
 [data-animation="rotateInOutDown"].is-visible .modal-dialog {
   transform: none;
 }
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: var(--black);
+  color: var(--swatch-text);
+  cursor: pointer;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.35s ease-in;
+  font-family: var(--font-primary);
+}
+
+.modal.is-visible {
+  visibility: visible;
+  opacity: 1;
+}
+
+.modal-root {
+  position: relative;
+  max-width: 1200vw;
+  max-height: 600vh;
+  overflow: visible;
+  display: flex;
+  flex-direction: column;
+  background: var(--swatch-complement);
+  cursor: default;
+  border-width: 2px;
+  border-color: black;
+  border-style: solid;
+  box-shadow: 5px 10px #888888;
+}
+
+.modal-root > * {
+  padding: 1rem;
+}
+
+.modal-north {
+  font-size:28pt;
+  font-weight: bold;
+  background-color: #669966;
+  color:white;
+}
+
+.modal-center {
+  display: grid;
+  grid-template-columns: 30% 65%;
+  grid-template-rows: 33% 33% 33%;
+  gap: 10px 20px;
+  font-size: 20pt;
+}
+
+span {
+  font-weight: bold;
+  font-style: italic;
+}
+
+.modal-south {
+  display:flex;
+  flex-direction: row;
+  background-color: lightgray;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-center-content {
+  grid-column: 1 / 3;
+  grid-row: 1 / 4;
+}
+
+.modal-prompt {  
+  font-size:20pt;
+  font-weight: bold;
+}
+
+.modal-textfield {
+  font-size:20pt;
+}
+
+.modal-button {
+  font-size: 20pt;
+}
+
+#title-prompt {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+}
+
+#edit-song-modal-title-textfield {
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+}
+
+#artist-prompt {
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
+}
+
+#edit-song-modal-artist-textfield {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+}
+
+#you-tube-id-prompt {
+  grid-column: 1 / 2;
+  grid-row: 3 / 4;
+}
+
+#edit-song-modal-youTubeId-textfield {
+  grid-column: 2 / 3;
+  grid-row: 3 / 4;
+}
+
+.confirm-cancel-box {
+  grid-column: 1 / 3;
+  grid-row: 3 / 4;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-button {
+  margin:5px;
+}
+
+.modal p + p {
+  margin-top: 1rem;
+}
+
+
 
 @keyframes mixInAnimations {
   0% {
